--- a/shelter/sass/abstracts/_mixin.scss
+++ b/shelter/sass/abstracts/_mixin.scss
@@ -17,6 +17,8 @@
   font-size: 17px;
   line-height: 130%;
   letter-spacing: 0.06em;
+  font-style: normal;
+  font-weight: 400;
   color: $color-dark-3xl;
   border-radius: 100px;
   padding: 15px 45px;
